# cbs-fantasy-tooling

./: .env.example  .gitignore  CLAUDE.md  README.md  REALTIME_MODE.md  TASK_LIST.md  Taskfile.yml  main.py  pyproject.toml  requirements.txt  setup.py
.claude/agents/: senior-data-engineer.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app/: WIN_ANALYZER_USAGE.md  authenticate.py  config.py  database.py  game_status_fetcher.py  game_status_main.py  main.py  notify.py  realtime_main.py  scrape.py  scrape_realtime.py  storage.py  win_scenario_analyzer.py
app/publishers/: __init__.py  database.py  email.py  file.py  web.py
cbs_fantasy_tooling/: WIN_ANALYZER_USAGE.md  config.py  main.py  scrape.py  win_scenario_analyzer.py
cbs_fantasy_tooling/analysis/: __init__.py  competitor_intelligence.py  monte_carlo.py  win_scenario_analyzer.py
cbs_fantasy_tooling/ingest/: __init__.py
docs/: IMPROVEMENT_ROADMAP.md  PHASE_2_SUMMARY.md  REALTIME_MODE.md  RESEARCH_QUESTIONS.md  USAGE.md  WIN_ANALYZER_USAGE.md  data-sources.md  monte-carlo.md  prompt.md  publishers.md  realtime.md  schemas.md  streaming-tasks.md  win-analyzer.md
schedule/: com.cbs-sports.scraper.plist
scraper/: main.py  scrape.py
scripts/: format.sh  lint.sh  schedule-task.sh  test.sh  unschedule-task.sh
simulator/: IMPROVEMENT_ROADMAP.md  README.md  USAGE.md  competitor_classifier.py  contrarian_analyzer.py  data_enrichment.py  data_loader.py  field_adapter.py  game_results_fetcher.py  main.py  main_old.py  monte.py  test_competitor_classifier.py
tests/: test_hello_world.py
(+46 files in other folders)
